--- a/misq/_extensions/misq/_extension.yml
+++ b/misq/_extensions/misq/_extension.yml
@@ -1,7 +1,7 @@
 title: Misq
 author: Nakul Padalkar
-version: 1.0.0
-quarto-required: ">=1.6.0"
+version: 0.10.0
+quarto-required: ">=1.5.0"
 contributes:
   formats:
     common:
@@ -9,6 +9,8 @@ contributes:
       filters:
         # You can include here Lua filters from your extension format 
         - color-text.lua
+      journal:
+        blinded: false
       shortcodes:
         # You can include here Lua filters defining shortcodes from your extension
         - shortcodes.lua
